fix: remove API Model Prediction
